--- a/src/components/sections/work_together/LetsWorkTogether.css
+++ b/src/components/sections/work_together/LetsWorkTogether.css
@@ -28,7 +28,6 @@
 
 
 .lets_work-submit {
-    width: 100vw;
     margin-top: 5%;
     margin-bottom: 3%;
     align-self: center;
